fix(theme): uat-14 cta button style and alignment

--- a/web/themes/custom/ellison/components/00-base/tailwind/_tailwind.scss
+++ b/web/themes/custom/ellison/components/00-base/tailwind/_tailwind.scss
@@ -2786,62 +2786,8 @@ div.webform {
   .cta-button__inner {
     gap: 2rem;
   }
-  /* #BUTTON */
-  .cta-button__button a {
-    border-radius: 9999px;
-  }
-  .cta-button__button a {
-    border-style: none;
-  }
-  .cta-button__button a {
-    --tw-bg-opacity: 1;
-    background-color: rgb(13 96 180 / var(--tw-bg-opacity));
-  }
-  .cta-button__button a {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-  }
-  .cta-button__button a {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-  }
-  .cta-button__button a {
-    font-weight: 700;
-  }
-  .cta-button__button a {
-    text-transform: uppercase;
-  }
-  .cta-button__button a {
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
-  .cta-button__button a {
-    text-decoration-line: none;
-  }
-  .cta-button__button a:hover {
-    text-decoration-line: none;
-  }
-  .cta-button__button a:hover {
-    opacity: 0.8;
-  }
-  .cta-button__button a:focus {
-    outline: 2px solid transparent;
-    outline-offset: 2px;
-  }
-  .cta-button__button a:focus {
-    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-  }
-  .cta-button__button a:focus {
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgb(70 182 227 / var(--tw-ring-opacity));
-  }
-  @media (min-width: 768px) {
-    .cta-button__button a {
-      padding-left: 3rem;
-      padding-right: 3rem;
-    }
+  .cta-button__button {
+    width: 100%;
   }
   &.text__align--right {
     display: flex;
