--- a/web/themes/custom/ellison/components/02-molecules/cta/cta.css
+++ b/web/themes/custom/ellison/components/02-molecules/cta/cta.css
@@ -3,10 +3,8 @@
   .cta-button__inner {
     @apply flex flex-col gap-8 items-start;
   }
-
-  /* #BUTTON */
-  .cta-button__button a {
-    @apply text-white bg-blue border-none hover:opacity-80 focus:ring-4 focus:ring-light-blue focus:outline-none rounded-full py-3 px-3 md:px-12 font-bold no-underline hover:no-underline uppercase;
+  .cta-button__button {
+    @apply w-full;
   }
 
 
